使用 Colab 创建而成

--- a/fed_iid_taskArithmetic.ipynb
+++ b/fed_iid_taskArithmetic.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "47c918b0",
       "metadata": {
         "colab": {
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "69aac5f0",
       "metadata": {
         "colab": {
@@ -112,140 +112,136 @@
         }
       ],
       "source": [
-        "\n",
         "import torch\n",
         "import torch.nn as nn\n",
-        "import copy\n",
         "from torch.utils.data import DataLoader, Subset\n",
-        "from preprocessing import FederatedDataBuilder\n",
         "from taskarithmetic import SparseSGDM, compute_fisher_sensitivity, calibrate_masks\n",
-        "from fed_avg_iid import DINOCIFAR100, fed_avg_aggregate # 复用你之前的模型和聚合函数\n",
         "\n",
-        "# ============================================================\n",
-        "# 1. 本地训练函数 (集成了 Task Arithmetic)\n",
-        "# ============================================================\n",
-        "def local_train_task_arithmetic(model, train_dataset, client_indices, device,\n",
-        "                                 sparsity_ratio=0.1, local_epochs=4):\n",
+        "def _split_head_and_backbone_params(model):\n",
+        "    head_params, backbone_params = [], []\n",
+        "    head_names = []\n",
+        "    for name, p in model.named_parameters():\n",
+        "        if not p.requires_grad:\n",
+        "            continue\n",
+        "        # 适配常见命名：head / classifier / fc\n",
+        "        if (\"head\" in name) or (\"classifier\" in name) or (name.endswith(\".fc.weight\") or name.endswith(\".fc.bias\")):\n",
+        "            head_params.append(p)\n",
+        "            head_names.append(name)\n",
+        "        else:\n",
+        "            backbone_params.append(p)\n",
+        "    return head_params, backbone_params, head_names\n",
+        "\n",
+        "def _freeze_params(params):\n",
+        "    for p in params:\n",
+        "        p.requires_grad = False\n",
+        "\n",
+        "def _unfreeze_params(params):\n",
+        "    for p in params:\n",
+        "        p.requires_grad = True\n",
+        "\n",
+        "def local_train_task_arithmetic_aligned(\n",
+        "    model,\n",
+        "    train_dataset,\n",
+        "    client_indices,\n",
+        "    device,\n",
+        "    sparsity_ratio=0.1,\n",
+        "    local_epochs_backbone=4,\n",
+        "    head_warmup_epochs=1,\n",
+        "    calib_rounds=3,\n",
+        "    calib_batches_per_round=5,\n",
+        "    batch_size=32,\n",
+        "    lr_head=0.05,\n",
+        "    lr_backbone=0.01,\n",
+        "    momentum=0.9,\n",
+        "):\n",
         "    \"\"\"\n",
-        "    客户端本地训练：包含掩码校准和稀疏微调\n",
+        "    对齐项目说明的本地训练：\n",
+        "    step0: 本地训练分类头，然后冻结\n",
+        "    step1: 多轮校准 least-sensitive mask（用于 backbone）\n",
+        "    step2: SparseSGDM 只更新 backbone 的 least-sensitive 子集\n",
         "    \"\"\"\n",
-        "    model.train()\n",
         "    model.to(device)\n",
+        "    model.train()\n",
         "\n",
-        "    # 准备本地数据\n",
         "    local_sub = Subset(train_dataset, list(client_indices))\n",
-        "    local_loader = DataLoader(local_sub, batch_size=32, shuffle=True)\n",
+        "    local_loader = DataLoader(local_sub, batch_size=batch_size, shuffle=True, num_workers=2, pin_memory=True)\n",
         "    criterion = nn.CrossEntropyLoss()\n",
         "\n",
-        "    # --- 阶段 A: 掩码校准 (Mask Calibration) ---\n",
-        "    # 根据项目要求：识别最不敏感 (least-sensitive) 的参数\n",
-        "    # 使用一轮 (num_batches=len(local_loader)) 即可代表本地数据的敏感度\n",
-        "    sensitivity_scores = compute_fisher_sensitivity(\n",
-        "        model, local_loader, criterion, device, num_batches=len(local_loader)\n",
-        "    )\n",
+        "    head_params, backbone_params, head_names = _split_head_and_backbone_params(model)\n",
+        "\n",
+        "    # ----------------------------\n",
+        "    # Step 0: Head warmup (train head only)\n",
+        "    # ----------------------------\n",
+        "    if len(head_params) == 0:\n",
+        "        # 如果你模型没按 head/classifier/fc 命名，这里就需要你自己改判断规则\n",
+        "        raise RuntimeError(\"No head parameters found. Check DINOCIFAR100 head naming.\")\n",
+        "\n",
+        "    _freeze_params(backbone_params)\n",
+        "    _unfreeze_params(head_params)\n",
+        "\n",
+        "    opt_head = torch.optim.SGD(head_params, lr=lr_head, momentum=momentum)\n",
+        "    for _ in range(head_warmup_epochs):\n",
+        "        for x, y in local_loader:\n",
+        "            x, y = x.to(device, non_blocking=True), y.to(device, non_blocking=True)\n",
+        "            opt_head.zero_grad(set_to_none=True)\n",
+        "            logits = model(x)\n",
+        "            loss = criterion(logits, y)\n",
+        "            loss.backward()\n",
+        "            opt_head.step()\n",
+        "\n",
+        "    # Freeze head after warmup (as per spec)\n",
+        "    _freeze_params(head_params)\n",
+        "    _unfreeze_params(backbone_params)\n",
+        "\n",
+        "    # ----------------------------\n",
+        "    # Step 1: Mask calibration (multiple rounds) on BACKBONE ONLY\n",
+        "    # ----------------------------\n",
+        "    # 注意：compute_fisher_sensitivity 会对所有 requires_grad=True 的参数算分数\n",
+        "    # 我们已经冻结了 head，所以这里只会对 backbone 计算\n",
+        "    sensitivity_accum = None\n",
+        "    for _ in range(calib_rounds):\n",
+        "        sens = compute_fisher_sensitivity(\n",
+        "            model,\n",
+        "            local_loader,\n",
+        "            criterion,\n",
+        "            device,\n",
+        "            num_batches=min(calib_batches_per_round, len(local_loader))\n",
+        "        )\n",
+        "        if sensitivity_accum is None:\n",
+        "            sensitivity_accum = sens\n",
+        "        else:\n",
+        "            # 做个简单平均，稳定 mask（也可以用 EMA）\n",
+        "            for k in sensitivity_accum:\n",
+        "                sensitivity_accum[k] = 0.5 * sensitivity_accum[k] + 0.5 * sens[k]\n",
         "\n",
         "    masks = calibrate_masks(\n",
-        "        sensitivity_scores,\n",
+        "        sensitivity_accum,\n",
         "        sparsity_ratio=sparsity_ratio,\n",
-        "        keep_least_sensitive=True # 项目 3.3 要求\n",
+        "        keep_least_sensitive=True  # 项目说明：least-sensitive\n",
         "    )\n",
         "\n",
-        "    # --- 阶段 B: 稀疏微调 (Sparse Fine-tuning) ---\n",
-        "    # 使用你实现的 SparseSGDM\n",
+        "    # ----------------------------\n",
+        "    # Step 2: Sparse fine-tuning (BACKBONE ONLY)\n",
+        "    # ----------------------------\n",
+        "    # SparseSGDM 只接收 backbone 参数（避免 head 被 mask 影响）\n",
         "    optimizer = SparseSGDM(\n",
-        "        model.parameters(),\n",
-        "        lr=0.08,\n",
-        "        momentum=0.9,\n",
+        "        backbone_params,\n",
+        "        lr=lr_backbone,\n",
+        "        momentum=momentum,\n",
         "        masks=masks\n",
         "    )\n",
         "\n",
-        "    for epoch in range(local_epochs):\n",
-        "        for inputs, labels in local_loader:\n",
-        "            inputs, labels = inputs.to(device), labels.to(device)\n",
-        "            optimizer.zero_grad()\n",
-        "            outputs = model(inputs)\n",
-        "            loss = criterion(outputs, labels)\n",
+        "    model.train()\n",
+        "    for _ in range(local_epochs_backbone):\n",
+        "        for x, y in local_loader:\n",
+        "            x, y = x.to(device, non_blocking=True), y.to(device, non_blocking=True)\n",
+        "            optimizer.zero_grad(set_to_none=True)\n",
+        "            logits = model(x)\n",
+        "            loss = criterion(logits, y)\n",
         "            loss.backward()\n",
-        "            optimizer.step() # 这里会自动应用掩码\n",
+        "            optimizer.step()\n",
         "\n",
-        "    return model.state_dict(), len(local_sub)\n",
-        "\n",
-        "# ============================================================\n",
-        "# 2. 主联邦训练循环\n",
-        "# ============================================================\n",
-        "def run_fed_iid_task_arithmetic(rounds=50, num_clients=100, sampling_rate=0.1, sparsity=0.1):\n",
-        "    DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "\n",
-        "    # 数据准备\n",
-        "    builder = FederatedDataBuilder(K=num_clients)\n",
-        "    # 获取 IID 划分\n",
-        "    dict_users = builder.get_iid_partition()\n",
-        "    test_loader = DataLoader(builder.test_dataset, batch_size=128, shuffle=False)\n",
-        "\n",
-        "    # 初始化全局模型\n",
-        "    global_model = DINOCIFAR100(num_classes=100).to(DEVICE)\n",
-        "\n",
-        "    history = {\"accuracy\": [], \"loss\": []}\n",
-        "\n",
-        "    for r in range(rounds):\n",
-        "        print(f\"\\n--- Round {r+1}/{rounds} (Sparsity: {sparsity}) ---\")\n",
-        "\n",
-        "        local_weights = []\n",
-        "        local_counts = []\n",
-        "\n",
-        "        # 随机选择客户端\n",
-        "        m = max(int(sampling_rate * num_clients), 1)\n",
-        "        selected_clients = np.random.choice(range(num_clients), m, replace=False)\n",
-        "\n",
-        "        for client_id in selected_clients:\n",
-        "            # 深拷贝全局模型到本地\n",
-        "            local_model = copy.deepcopy(global_model)\n",
-        "\n",
-        "            # 本地任务算术训练\n",
-        "            w, count = local_train_task_arithmetic(\n",
-        "                local_model,\n",
-        "                builder.train_dataset,\n",
-        "                dict_users[client_id],\n",
-        "                DEVICE,\n",
-        "                sparsity_ratio=sparsity\n",
-        "            )\n",
-        "\n",
-        "            local_weights.append(w)\n",
-        "            local_counts.append(count)\n",
-        "\n",
-        "        # 聚合 (FedAvg)\n",
-        "        global_weights = fed_avg_aggregate(global_model, local_weights, local_counts)\n",
-        "        global_model.load_state_dict(global_weights)\n",
-        "\n",
-        "        # 全局评估\n",
-        "        acc, loss = evaluate(global_model, test_loader, DEVICE)\n",
-        "        history[\"accuracy\"].append(acc)\n",
-        "        history[\"loss\"].append(loss)\n",
-        "        print(f\"Round {r+1} Global Test Acc: {acc:.2f}%\")\n",
-        "\n",
-        "    return history\n",
-        "\n",
-        "def evaluate(model, loader, device):\n",
-        "    model.eval()\n",
-        "    criterion = nn.CrossEntropyLoss()\n",
-        "    correct = 0\n",
-        "    total = 0\n",
-        "    total_loss = 0\n",
-        "    with torch.no_grad():\n",
-        "        for inputs, labels in loader:\n",
-        "            inputs, labels = inputs.to(device), labels.to(device)\n",
-        "            outputs = model(inputs)\n",
-        "            loss = criterion(outputs, labels)\n",
-        "            total_loss += loss.item()\n",
-        "            _, predicted = torch.max(outputs.data, 1)\n",
-        "            total += labels.size(0)\n",
-        "            correct += (predicted == labels).sum().item()\n",
-        "    return 100 * correct / total, total_loss / len(loader)\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    import numpy as np\n",
-        "    # 运行实验\n",
-        "    run_fed_iid_task_arithmetic(rounds=20, sparsity=0.1)"
+        "    return model.state_dict(), len(local_sub)\n"
       ]
     },
     {
@@ -655,7 +651,7 @@
         "outputId": "8c59d3c7-d232-4177-8ec7-91376c025610"
       },
       "id": "24MgjhUNTAQh",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
