使用 Colab 创建而成

--- a/fed_iid_taskArithmetic.ipynb
+++ b/fed_iid_taskArithmetic.ipynb
@@ -2,14 +2,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "47c918b0",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "47c918b0",
-        "outputId": "c8711952-371d-4ee3-ba57-a479672dc884"
+        "outputId": "dce94327-0b4a-47c3-a598-88eda839f36d"
       },
       "outputs": [
         {
@@ -33,85 +33,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "69aac5f0",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 924
-        },
-        "id": "69aac5f0",
-        "outputId": "490f60fb-5934-46e9-c9a4-9facdd97d004"
+        "id": "69aac5f0"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Creating IID partition for 100 clients...\n",
-            "Downloading/Loading DINO ViT-S/16...\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Using cache found in /root/.cache/torch/hub/facebookresearch_dino_main\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "--- Round 1/20 (Sparsity: 0.1) ---\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Round 1 Global Test Acc: 1.00%\n",
-            "\n",
-            "--- Round 2/20 (Sparsity: 0.1) ---\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Calculating sensitivity over 15 batches...\n",
-            "Round 2 Global Test Acc: 1.00%\n",
-            "\n",
-            "--- Round 3/20 (Sparsity: 0.1) ---\n",
-            "Calculating sensitivity over 15 batches...\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-95028673.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    131\u001b[0m     \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    132\u001b[0m     \u001b[0;31m# 运行实验\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 133\u001b[0;31m     \u001b[0mrun_fed_iid_task_arithmetic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrounds\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msparsity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/tmp/ipython-input-95028673.py\u001b[0m in \u001b[0;36mrun_fed_iid_task_arithmetic\u001b[0;34m(rounds, num_clients, sampling_rate, sparsity)\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m             \u001b[0;31m# 本地任务算术训练\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m             w, count = local_train_task_arithmetic(\n\u001b[0m\u001b[1;32m     91\u001b[0m                 \u001b[0mlocal_model\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m                 \u001b[0mbuilder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_dataset\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/tmp/ipython-input-95028673.py\u001b[0m in \u001b[0;36mlocal_train_task_arithmetic\u001b[0;34m(model, train_dataset, client_indices, device, sparsity_ratio, local_epochs)\u001b[0m\n\u001b[1;32m     52\u001b[0m             \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m             \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 这里会自动应用掩码\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocal_sub\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/torch/optim/optimizer.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    515\u001b[0m                             )\n\u001b[1;32m    516\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 517\u001b[0;31m                 \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    518\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_optimizer_step_code\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    519\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/torch/utils/_contextlib.py\u001b[0m in \u001b[0;36mdecorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    118\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mdecorate_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mctx_factory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 120\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    121\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    122\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdecorate_context\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/content/drive/MyDrive/taskarithmetic.py\u001b[0m in \u001b[0;36mstep\u001b[0;34m(self, closure)\u001b[0m\n\u001b[1;32m    108\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m                 \u001b[0;31m# Update step\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 110\u001b[0;31m                 \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md_p\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mlr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    111\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
+        "\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import copy\n",
+        "from torch.utils.data import DataLoader, Subset\n",
+        "from preprocessing import FederatedDataBuilder\n",
+        "from taskarithmetic import SparseSGDM, compute_fisher_sensitivity, calibrate_masks\n",
+        "from fed_avg_iid import DINOCIFAR100, fed_avg_aggregate # 复用你之前的模型和聚合函数\n",
+        "\n",
+        "# ============================================================\n",
+        "# 1. 本地训练函数 (集成了 Task Arithmetic)\n",
+        "# ============================================================\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "from torch.utils.data import DataLoader, Subset\n",
@@ -241,7 +181,115 @@
         "            loss.backward()\n",
         "            optimizer.step()\n",
         "\n",
-        "    return model.state_dict(), len(local_sub)\n"
+        "    return model.state_dict(), len(local_sub)\n",
+        "\n",
+        "\n",
+        "# ============================================================\n",
+        "# 2. 主联邦训练循环\n",
+        "# ============================================================\n",
+        "def run_fed_iid_task_arithmetic(rounds=50, num_clients=100, sampling_rate=0.1, sparsity=0.1):\n",
+        "    DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "\n",
+        "    # 数据准备\n",
+        "    builder = FederatedDataBuilder(K=num_clients)\n",
+        "    # 获取 IID 划分\n",
+        "    dict_users = builder.get_iid_partition()\n",
+        "    test_loader = DataLoader(builder.test_dataset, batch_size=128, shuffle=False)\n",
+        "\n",
+        "    # 初始化全局模型\n",
+        "    global_model = DINOCIFAR100(num_classes=100).to(DEVICE)\n",
+        "\n",
+        "    history = {\"accuracy\": [], \"loss\": []}\n",
+        "\n",
+        "    for r in range(rounds):\n",
+        "        print(f\"\\n--- Round {r+1}/{rounds} (Sparsity: {sparsity}) ---\")\n",
+        "\n",
+        "        local_weights = []\n",
+        "        local_counts = []\n",
+        "\n",
+        "        # 随机选择客户端\n",
+        "        m = max(int(sampling_rate * num_clients), 1)\n",
+        "        selected_clients = np.random.choice(range(num_clients), m, replace=False)\n",
+        "\n",
+        "        for client_id in selected_clients:\n",
+        "            # 深拷贝全局模型到本地\n",
+        "            local_model = copy.deepcopy(global_model)\n",
+        "\n",
+        "            # 本地任务算术训练\n",
+        "            w, count = local_train_task_arithmetic(\n",
+        "                local_model,\n",
+        "                builder.train_dataset,\n",
+        "                dict_users[client_id],\n",
+        "                DEVICE,\n",
+        "                sparsity_ratio=sparsity\n",
+        "            )\n",
+        "\n",
+        "            local_weights.append(w)\n",
+        "            local_counts.append(count)\n",
+        "\n",
+        "        # 聚合 (FedAvg)\n",
+        "        global_weights = fed_avg_aggregate(global_model, local_weights, local_counts)\n",
+        "        global_model.load_state_dict(global_weights)\n",
+        "\n",
+        "        # 全局评估\n",
+        "        acc, loss = evaluate(global_model, test_loader, DEVICE)\n",
+        "        history[\"accuracy\"].append(acc)\n",
+        "        history[\"loss\"].append(loss)\n",
+        "        print(f\"Round {r+1} Global Test Acc: {acc:.2f}%\")\n",
+        "\n",
+        "    return history\n",
+        "\n",
+        "def evaluate(model, loader, device):\n",
+        "    model.eval()\n",
+        "    criterion = nn.CrossEntropyLoss()\n",
+        "    correct = 0\n",
+        "    total = 0\n",
+        "    total_loss = 0\n",
+        "    with torch.no_grad():\n",
+        "        for inputs, labels in loader:\n",
+        "            inputs, labels = inputs.to(device), labels.to(device)\n",
+        "            outputs = model(inputs)\n",
+        "            loss = criterion(outputs, labels)\n",
+        "            total_loss += loss.item()\n",
+        "            _, predicted = torch.max(outputs.data, 1)\n",
+        "            total += labels.size(0)\n",
+        "            correct += (predicted == labels).sum().item()\n",
+        "    return 100 * correct / total, total_loss / len(loader)\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    import numpy as np\n",
+        "    # 运行实验\n",
+        "    run_fed_iid_task_arithmetic(rounds=20, sparsity=0.1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == \"__main__\":\n",
+        "    run_fed_iid_task_arithmetic(rounds=20, sparsity=0.1)"
+      ],
+      "metadata": {
+        "id": "PRnJzSf8wxrN",
+        "outputId": "374fc630-5ccf-4ed9-ecf0-232a84896a48",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 162
+        }
+      },
+      "id": "PRnJzSf8wxrN",
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'run_fed_iid_task_arithmetic' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-442898188.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mrun_fed_iid_task_arithmetic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrounds\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msparsity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'run_fed_iid_task_arithmetic' is not defined"
+          ]
+        }
       ]
     },
     {
